--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ephermal chatrooms on demand.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack",
+    "dist": "webpack --env production"
   },
   "keywords": [
     "WAMP",
@@ -13,7 +14,21 @@
   "author": "NeoAtlantis",
   "license": "GPL-3.0",
   "dependencies": {
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "express": "^4.18.1",
-    "nawamp": "^1.0.0"
+    "ifdef-loader": "^2.3.2",
+    "lodash": "^4.17.21",
+    "nawamp": "^1.0.0",
+    "tweetnacl": "^1.0.3",
+    "ws": "^8.9.0"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "vue": "^3.2.40",
+    "vue-cli": "^2.9.6",
+    "vue-loader": "^17.0.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
