--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ws": "^8.9.0"
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "vue": "^3.2.40",
     "vue-cli": "^2.9.6",
