--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "author": "NeoAtlantis",
   "license": "GPL-3.0",
   "dependencies": {
+    "autobahn-browser": "^20.9.2",
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "express": "^4.18.1",
     "ifdef-loader": "^2.3.2",
     "lodash": "^4.17.21",
     "nawamp": "^1.0.0",
+    "socket.io": "^4.5.2",
     "tweetnacl": "^1.0.3",
     "ws": "^8.9.0"
   },
@@ -27,7 +29,7 @@
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "vue": "^3.2.40",
-    "vue-cli": "^2.9.6",
+    "vue-cli": "^1.2.0",
     "vue-loader": "^17.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
