--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "ifdef-loader": "^2.3.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nawamp": "^1.0.0",
     "socket.io": "^4.5.2",
     "tweetnacl": "^1.0.3",
