--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buffer": "^6.0.3",
     "events": "^3.3.0",
     "express": "^4.18.1",
+    "floating-vue": "^2.0.0-beta.20",
     "ifdef-loader": "^2.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
