--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "nawamp": "^1.0.0",
+    "openpgp": "^5.5.0",
     "socket.io": "^4.5.2",
     "tweetnacl": "^1.0.3",
     "ws": "^8.9.0"
