--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "remove-console-webpack-plugin": "^0.2.0",
     "vue": "^3.2.40",
     "vue-cli": "^1.2.0",
     "vue-loader": "^17.0.0",
