--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "openpgp": "^5.5.0",
     "socket.io": "^4.5.2",
     "tweetnacl": "^1.0.3",
+    "vue-i18n": "^9.2.2",
     "ws": "^8.9.0"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^4.2.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "remove-console-webpack-plugin": "^0.2.0",
     "vue": "^3.2.40",
-    "vue-cli": "^1.2.0",
+    "vue-cli": "^2.9.6",
     "vue-loader": "^17.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
