--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openpgp": "^5.5.0",
     "socket.io": "^4.5.2",
     "tweetnacl": "^1.0.3",
+    "uuidv4": "^6.2.13",
     "vue-i18n": "^9.2.2",
     "ws": "^8.9.0"
   },
